--- a/app/index.html
+++ b/app/index.html
@@ -20,42 +20,99 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+      <div class="header" style="background-color: #282827">
+        <div class="header_1" style="height: 50px;">
+          <div id="header-buttons">
+            <div layout="row" >
+              <div flex>
+                <a ng-href="./admin.html"><img src="images/logo.png" style="width: 85px"></a>
+              </div>
+              <div flex="30" style="margin-top:10px; text-align: right;">
+                <form  layout="row">
+                  <input flex="80" type="text" name="searchText" placeholder="search" style="background-color: #282827; color: white; outline: none">
+                  <a ng-href="#/searchResults"><img src="images/search.png"></a>
+                  <!--<input type="button" style="background-image: url(/images/search.png); width: 32px; height: 32px; background-color: #282827">-->
+                </form>
 
-            <a class="navbar-brand" href="#/">lbaw</a>
+              </div>
+              <div flex="10" style="text-align: right">
+                <img src="images/msg.png" style="height: 40px">
+              </div>
+              <div flex="10" style=" text-align: right;">
+                <a ng-href="#/about"><img src="images/user.png"></a>
+              </div>
+            </div>
           </div>
+        </div>
+        <div class="header_2">
+          ask a question
+          <hr style="width: 30%; ">
+          <div class="aparece" style="padding-left: 30%; padding-right: 30%">
+            <form>
+              <input type="text" name="questionTitle" placeholder="Title" style="width: 100%; margin-top: 10px"><br>
+              <input type="text" name="questionDescription" placeholder="Description" style="width: 100%; height: 100px; margin-top: 10px"><br>
+              <div layout="row">
+              <input flex type="text" name="questionTag" placeholder="tags" style="width: 1000%; margin-top: 10px">
+              <div flex="33" style="text-align: right;">
+                <input type="button" name="questionButton" value="post question" style="margin-top:7px; background-color: #f1423b; color: white;">
+              </div>
+            </div>
+            </form>
+          </div>
+        </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
+
+      </div>
+
+      <div class="container">
+      <div ng-view=""></div>
+      </div>
+
+      <div class="footer" style="background-color: #282827">
+        <div class="container">
+          <div layout="row">
+            <div flex>
+              <ul style="color: #ee453e">
+                <li>chat</li>
+                <li>about us</li>
+                <li>contact</li>
+                <li>help</li>
+              </ul>
+            </div>
+            <div flex>
+              <ul style="color: #d9d9d8;">
+                <li>rpg</li>
+                <li>mmo</li>
+                <li>moba</li>
+                <li>fps</li>
+                <li>adventure</li>
+                <li>action</li>
+              </ul>
+            </div>
+            <div flex>
+              <ul style="color: #d9d9d8;">
+                <li>PC</li>
+                <li>PlayStation</li>
+                <li>Xbox</li>
+                <li>PSP</li>
+                <li>Wii</li>
+              </ul>
+            </div>
+            <div flex>
+              <ul style="color: #d9d9d8;">
+                <li>Square Enix</li>
+                <li>Rockstar</li>
+                <li>Blizzard</li>
+                <li>Ubisoft</li>
+              </ul>
+            </div>
+            <div flex="40">
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
